--- a/src/components/home/Homepage.css
+++ b/src/components/home/Homepage.css
@@ -3,3 +3,18 @@
     flex-direction: column;
 
 }
+
+.scroll-up{
+    
+    padding: 10px;
+    background-image: linear-gradient(45deg,#0072E5,#007FFF);
+    border-radius: 50%;
+    width: 50px;
+    color: aliceblue;
+    margin: 20px;
+    box-shadow: 0 1px 5px 0 rgba(128, 128, 128, 0.348);
+    position: fixed; 
+    bottom: 40px;
+    left: 90%;
+    z-index: 1;
+}
