changes in css login and signup

--- a/src/components/LoginNsignup/signup.css
+++ b/src/components/LoginNsignup/signup.css
@@ -1,7 +1,7 @@
 .login {
     width: 100vw;
     height: 100vh;
-    background-color: #f0f2f5;
+    background-color: #b0d2f4;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,13 +33,14 @@
   }
   
   .loginBox{
-      height: 490px;
+      height: 600px;
       padding: 40px;
       background-color: white;
       border-radius: 10px;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      box-shadow: 14px 11px 12px 9px rgb(126, 121, 121);
   }
   
   .loginInput{
@@ -59,13 +60,15 @@
       height: 50px;
       border-radius: 10px;
       border: none;
-      background-color: #1775ee;
+      background-color: #1170ec;
       color: white;
       font-size: 20px;
       font-weight: 500;
       cursor: pointer;
       margin: 10px;
       padding: 5px;
+      width: 90px;
+      
       
   }
   
@@ -85,4 +88,29 @@
       font-size: 20px;
       font-weight: 500;
       cursor: pointer;
+  }
+
+  .imgs{
+    padding-top: 5px;
+    justify-content: center;
+    display: flex;
+  }
+  
+  .img-container{
+    background-color: white;
+    border-radius: 150px;
+    align-items: center;
+    display: flex;
+    width: 115px;
+  }
+  .profile{
+    height: 90px;
+    width: 100px;
+    border-radius: 25px;
+    margin-bottom: 14px;
+  }
+
+  .formcss{
+    justify-content: center;
+    text-align: center;
   }
