--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -21,8 +21,8 @@
     z-index: 100;
     width: 100%;
     padding: 20px;
-    background-color: black;
-    box-shadow: 0 0 5px 0 rgba(128, 128, 128, 0.348);
+    background-color: rgb(41, 41, 41);
+    box-shadow: 0 1px 5px 3px rgba(128, 128, 128, 0.348);
 }
 
 
