--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -102,8 +102,6 @@
 
 .header_right {
     display: flex;
-    
-    
     width: 17vw;
     margin-right: 80px;
 
@@ -119,13 +117,7 @@
     padding-right: 3px; 
 
 }
-.nav-dp{
-    border-radius:50%;  
-    width:100px;
-    height:50px;
-    background-size:cover;
 
-}
 
 .create-btn{
     padding: 5px;
@@ -147,5 +139,13 @@
 .logo-div{
     padding-left: 0px;
    
+}
+
+.nav-dp{
+    border-radius: 30px;
+    border: 2px solid #0072E5;
+    width: 50px;
+    height: 50px;
+    box-shadow: #0080ff59 0px 2px 8px 0px;
 }
 
