--- a/src/components/navbar/NavBar.css
+++ b/src/components/navbar/NavBar.css
@@ -144,8 +144,9 @@
 .nav-dp{
     border-radius: 30px;
     border: 2px solid #0072E5;
-    width: 50px;
-    height: 50px;
+    width: 40px;
+    height: 40px;
     box-shadow: #0080ff59 0px 2px 8px 0px;
+    object-fit: cover;
 }
 
